# rate_limiter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: typst_build.yml
backup/: interface.hpp  limiters.hpp  meta.hpp  sharded_storage.hpp
benchmark/: CMakeLists.txt  burst_bm.cpp  common.hpp  config.hpp  diurnal_bm.cpp  sparse+burst_bm.cpp  token_bucket_bm.cpp  uniform_bm.cpp  zombie_bm.cpp
lib/: CMakeLists.txt  alg_base.hpp  aligned_alloc.cpp  interface.hpp  leaky_bucket.cpp  leaky_bucket.hpp  limiters.hpp  meta.hpp  mutex_storage.hpp  sharded_storage.hpp  sliding_win_log.cpp  sliding_win_log.hpp  token_bucket.cpp  token_bucket.hpp  ttl.cpp  ttl.hpp
lib/algorithms/: alg_base.hpp  leaky_bucket.cpp  leaky_bucket.hpp  limiters.hpp  sliding_win_log.hpp  token_bucket.hpp
report/: presentation.typ  report.typ
results/: h1_uniform_raw.csv  h2_zombie_raw.csv  h3_burst_raw.csv
src/: aligned_alloc.hpp  interface.cpp  interface.hpp  limiters.hpp  main.cpp  mutex_storage.hpp  sharded_storage.hpp  sliding_win_log.cpp  sliding_win_log.hpp  token_bucket.cpp  token_bucket.hpp
unit_tests/: CMakeLists.txt  Interface_ut.cpp  leaking_bucket_ut.cpp  meta_ut.cpp  mock_clock.hpp  mock_mixin.hpp  mutex_storage_ut.cpp  sharded_storage_ut.cpp  sliding_win_log_ut.cpp  token_bucket_ut.cpp  ttl_ut.cpp
